tests/fixtures/original-compiler/passing/ForeignTypeSynonymSameName/Reexporter.purs
module ForeignTypeSynonymSameName.Reexporter
  ( module ForeignTypeSynonymSameName.SynonymNode
  ) where

import ForeignTypeSynonymSameName.SynonymNode
