tests/fixtures/original-compiler/failing/HalogenStateIncorrectAnnotationOnTypeVariable/Lib.purs
module Lib
  ( module Lib2
  ) where

import Prelude hiding (join)

import Lib2 (modify_)
